<resources>
    <string name="app_name">EduGoal</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_career_path_detail">CareerPathDetailActivity</string>
    <string name="field_of_interest">Career Choice</string>
    <string name="tv_title_desired_edu_level">Desired</string>
    <string name="tv_title_current_edu_level">Current</string>
    <string name="tv_title_age">Age group</string>
    <string name="tv_title_current_level_edu">Current level of education</string>
    <string name="tv_title_subject_likability">Subject preferences</string>
    <string name="dislike">Dislike</string>
    <string name="love">Like</string>
    <string name="tv_subject_science">Science</string>
    <string name="tv_subject_english">English</string>
    <string name="tv_subject_math">Math</string>
    <string name="tv_subject_social_studies">Social Studies</string>
    <string name="tv_subject_physical_education">Physical Education</string>
    <string name="title_activity_your_information">Your Information</string>
    <string name="action_done">Done</string>
    <string name="tv_title_edu_level">Education goal</string>
    <string name="odds_of_hired">Employment rate based on goal</string>
    <string name="tv_description_employment_rate_1">Based on Statistics Canada, your age and education, you have a</string>
    <string name="tv_description_employment_rate_2">higher chance of being employed if your level of education is</string>
    <string name="tv_about">About</string>
    <string name="tv_average_salary">Average wage and salary in Canada</string>
    <string name="tv_tuition_fees">Annual tuition fees by province</string>
    <string name="action_account">Account</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_recommend">Recommendations</string>
    <string name="action_sort_alpha">Alphabetical</string>
    <string name="action_sort_tuition_asc">Tuition - Ascending</string>
    <string name="action_sort_tuition_desc">Tuition - Descending</string>
    <string name="action_sort_salary_asc">Salary - Ascending</string>
    <string name="action_sort_salary_desc">Salary - Descending</string>
    <string name="toast_recommending_career_paths">Recommending Career Paths</string>
</resources>
