<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_recommendations"
                    android:checked="true"
                    android:orderInCategory="10"
                    android:title="@string/action_sort_recommend"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_alphabetical_ascending"
                    android:orderInCategory="20"
                    android:title="@string/action_sort_alpha"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_tuition_ascending"
                    android:orderInCategory="30"
                    android:title="@string/action_sort_tuition_asc"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_tuition_descending"
                    android:orderInCategory="40"
                    android:title="@string/action_sort_tuition_desc"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_salary_ascending"
                    android:orderInCategory="50"
                    android:title="@string/action_sort_salary_asc"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_sort_salary_descending"
                    android:orderInCategory="60"
                    android:title="@string/action_sort_salary_desc"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/account"
        android:title="@string/action_account"
        app:showAsAction="always" />
</menu>
